samples/_failures_safe/1761343712_891b6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_625ef9aa.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_625ef9aa.c:165:5: error: expected declaration or statement at end of input
  165 |     printf("Unknown event.\n");
      |     ^~~~~~
